<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_medium">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        tools:context=".MainActivity">
        <!--       android:focusable="true"  android:screenReaderFocusable="true"-->
        <TextView
            android:id="@+id/tv_hello_world"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pading_large"
            android:accessibilityHeading="true"
            android:background="@android:color/holo_blue_dark"
            android:nextFocusForward="@id/tv_timer"
            android:text="Hello World!"
            android:textColor="@android:color/holo_red_dark"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgv_logo_holder"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="@dimen/margin_small"
            android:importantForAccessibility="yes"
            android:src="@drawable/playstore"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_hello_world" />

        <include
            android:id="@+id/group_personal_details"
            layout="@layout/grouping_example"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgv_logo_holder" />

        <EditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:accessibilityDataSensitive="yes"
            android:hint="@string/hint_label_password"
            android:importantForAutofill="no"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/group_personal_details" />
        <TextView
            android:id="@+id/tv_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:accessibilityLiveRegion="assertive"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textColor="@color/design_default_color_error"
            app:layout_constraintTop_toBottomOf="@id/ed_password"
            android:text="@string/error" />

        <TextView
            android:id="@+id/tv_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_medium"
            android:accessibilityLiveRegion="assertive"
            android:accessibilityTraversalAfter="@id/ed_password"
            android:accessibilityTraversalBefore="@id/cv_holder"
            android:nextFocusLeft="@id/cv_holder"
            android:nextFocusRight="@id/tv_hello_world"
            android:nextFocusUp="@id/tv_hello_world"
            android:nextFocusDown="@id/tv_hello_world"
            android:nextFocusForward="@id/imgv_logo_holder"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_error"
            tools:text="Timer text holder" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_open_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_timer" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/heading_demo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_open_details" />

        <androidx.compose.ui.platform.ComposeView
            android:id="@+id/cv_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_heading" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>